--- a/src/components/MessageCard/MessageCard.scss
+++ b/src/components/MessageCard/MessageCard.scss
@@ -1,4 +1,8 @@
 div.messageCard {
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
     display: flex;
 
     &[data-direction="received"] {
